# stable-audio-tools

./: Dockerfile  defaults.ini  entrypoint.sh  gpu-platform-user-guide.md  main.sh  node_0.sh  node_1.sh  pyproject.toml  train.py  train_dit.sh  train_vae.sh
scripts/: autoencoder.py  decode_latents_sa3.py  encode_latents_sa3.py
stable_audio_tools/configs/dataset_configs/: dataset_train.json  dataset_val.json  paired_latent_jsonl_train.json  paired_letent_jsonl_val.json
stable_audio_tools/configs/model_configs/autoencoders/: stable_audio_3_0_vae.json
stable_audio_tools/configs/model_configs/txt2audio/: stable_audio_3_0.json  stable_audio_3_0_master.json
stable_audio_tools/data/: dataset.py
stable_audio_tools/models/: conditioners.py
stable_audio_tools/training/: diffusion.py  utils.py
